clusters/labinfra/apps/browserless.xuperson.org/browserless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browserless
  namespace: browserless
spec:
  selector:
    app: browserless
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
